samples/_failures_safe/1761270057_1823bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bb3cc38.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_5bb3cc38.c:146:22: error: expected ‘)’ at end of input
  146 |     while (fgets(line
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_5bb3cc38.c:146:12: error: too few arguments to function ‘fgets’
  146 |     while (fgets(line
      |            ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_5bb3cc38.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_5bb3cc38.c:146:5: error: expected declaration or statement at end of input
  146 |     while (fgets(line
      |     ^~~~~
